--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://localhost:27017/electromart
+MONGO_URL=mongodb+srv://electromartUser:C09XmGMEqN7JQ5hY@cluster0.h2mttv0.mongodb.net/electromart?appName=Cluster0
 PORT=3000
-SESSION_SECRET=this_is_a_secret_key
+SESSION_SECRET=this_is_a_secret_key 
